Reworked Default Boot and SecureBoot

--- a/archonzfs.cfg
+++ b/archonzfs.cfg
@@ -14,9 +14,11 @@
 #LINUXARRAY=( linux-lts )
 # Hostname of new install.
 #HOSTNAMEINSTALL=archonzfs
-# Change Default Boot Option. 0 to skip 1 requires manual intervention
-#CHANGEDEFAULT=0
-# Secureboot via sbctl 0 to skip. 1 Requires manual intervention for confirmation of setup mode.
+# Don't Change Default Boot Option.
+#NOCHANGEDEFAULT=1
+#   $DEFAULTBOOT default boot option.
+#DEFAULTBOOT=archlinux-linux-lts.efi
+# Secureboot via sbctl 0 to skip. 1 Requires Setup Mode and will enroll with Microsoft Keys, otherwise will generate and sign keys.
 #SECUREBOOT=0
 # Umount and export after installation.
 #UMOUNT=1
