root.key handling when passing in from config file.

--- a/archonzfs.cfg
+++ b/archonzfs.cfg
@@ -1,35 +1,35 @@
 # Disk you wish to use for Install
-#DISK=/dev/disk/by-id/nvme_ata
+DISK=/dev/disk/by-id/nvme_ata
 # Partition for target EFI system Partition.
-#EFI=$DISK-part1
+EFI=$DISK-part1
 # Partition for target zfs install location.
-#ZFS=$DISK-part3
+ZFS=$DISK-part3
 # (Optional) Partition for target Swap Partition (Require PARTLABEL=SWAP)
-#SWAPPART=$DISK-part2
+SWAPPART=$DISK-part2
 # (Optional) Hibernation Resume (Requires Swap > Memory)
 #SWAPRESUME=
 # (Optional) Hibernation Resume Key
 #SWAPKEY=/tmp/swap.key
 # Bash array of Linux Kernels to Install.
-#LINUXARRAY=( linux-lts )
+LINUXARRAY=( linux-lts )
 # Hostname of new install.
-#HOSTNAMEINSTALL=archonzfs
+HOSTNAMEINSTALL=archonzfs
 # Don't Change Default Boot Option.
-#NOCHANGEDEFAULT=1
+NOCHANGEDEFAULT=1
 #   $DEFAULTBOOT default boot option.
 #DEFAULTBOOT=archlinux-linux-lts.efi
 # Secureboot via sbctl 0 to skip. 1 Requires Setup Mode and will enroll with Microsoft Keys, otherwise will generate and sign keys.
-#SECUREBOOT=0
+SECUREBOOT=0
 # Umount and export after installation.
 #UMOUNT=1
 # Autoreboot following installation.
 #AUTOREBOOT=1
 # PATH TO ZFS ENCRYPTION KEy
-#ZFSKEY=/etc/zfs/zroot.key
+ZFSKEY=/etc/zfs/zroot.key
 # Path to Root's Password
-#ROOTKEY=/tmp/root-chpasswd.key
+ROOTKEY=/tmp/root.key
 # If one of the following is enabled
 # (Optional) Enable SSH for Remote Access to ZFSBootMenu in initramfs. 0 to skip, 1 to install.
-#ZFSREMOTE=1
-# (Optional) SSH Public Key for Remote Access to ZFSBootMenu
+ZFSREMOTE=0
+# (Optional) SSH Public Key for Remote Access to ZFSBootMenu. Implies ZFSREMOTE=1
 #SSHKEY=/tmp/ssh.key
